--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,15 +1,21 @@
 .large-hero {
   position: relative;
-}
-
-.large-hero__text-content {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  transform: translateY(-55%);
-
-
-
+  &__text-content {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    transform: translateY(-55%);
+  }
+  &__title {
+    font-weight: 300;
+    color: #2f5572;
+    font-size: 4.8rem;
+  }
+  &__subtitle {
+    font-weight: 300;
+    color: #2f5572;
+    font-size: 2.9rem;
+  }
 }
