--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,11 +1,9 @@
-/* This is the global settings file or our base */
-
 body {
-  font font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #333;
 }
 
 img {
   max-width: 100%;
-  height:auto;
+  height: auto;
 }
